# Distill

./: .coverage  .depcheckrc.json  .gitignore  .jscpd.json  .pre-commit-config.yaml  .prettierignore  AGENTS.md  README.md  config.yaml  eslint.config.js  keys.yaml.example  knip.json  mkdocs.yml  package-lock.json  package.json  prompts.yaml  pyproject.toml  renovate.json  vitest.config.js
.github/workflows/: ci.yml
docs/: architecture.md  changelog.md  configuration.md  development.md  getting-started.md  index.md
docs/api/: compile.md
docs/reference/: card-schema.md  stage3-json.md
docs/runbooks/: api-key-rotation.md  compilation-failure.md  database-corruption.md  index.md  resume-loop.md  schema-drift.md
examples/: config.full.yaml  config.minimal.yaml  config.standard.yaml  keys.full.yaml  keys.minimal.yaml  keys.standard.yaml  prompts.full.yaml  prompts.minimal.yaml  prompts.standard.yaml
schemas/: stage3-card.schema.json  stage3-deck.schema.json
scripts/: _walk.js  check-oversize.js  export-schemas.js  scan-todos.js  validate-agents-md.js
src/: cli.js  compile.py  config.js  context.js  database.js  ingestion.js  logger.js  orchestrator.js  postProcess.js  prompts.js  providers.js  stages.js
src/commands/: _log.js  cache.js  compile.js  run.js
src/compile/: __init__.py  deck.py  html.py  ids.py  loader.py  mcq.py  models.py  notes.py  styles.py  tags.py
src/llm/: cache-io.js  cache.js  caller.js  client.js  index.js  keys.js  throttle.js
src/pipeline/: compiler.js  orchestrator.js  validation.js
src/pipeline/schemas/: card-json.js  card-zod.js  index.js
src/pipeline/stages/: index.js  stage1-generation.js  stage2-synthesis.js  stage3-enforcement.js
tests/: commands.test.js  concurrency.test.js  config.test.js  conftest.py  database.test.js  ingestion.test.js  n_plus_one.test.js  orchestrator.test.js  postProcess.test.js  providers.test.js  scripts.test.js  stages_generation.test.js  stages_json.test.js  stages_synthesis.test.js  test_compile.py  test_e2e_compile_cli.py
tests/fixtures/: flush_warnings_config.yaml  flush_warnings_keys.yaml  parse_model_edge.yaml  parse_model_edge_keys.yaml  pipeline_models_edge.yaml
tests/fixtures_database/: reinit-a.db
tests/integration/: ingestion-and-postprocess.test.js  orchestrator-resume.test.js  pipeline.e2e.test.js
