[project]
name = "distill"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "bleach>=6.4.0",
    "genanki>=0.13.1",
    "markdown>=3.10.2",
]

[dependency-groups]
dev = [
    "deptry>=0.25.1",
    "jsonschema>=4.26.0",
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.7.6",
    "mkdocstrings>=1.0.4",
    "mkdocstrings-python>=2.0.5",
    "pymdown-extensions>=10.21.3",
    "pytest>=9.1.1",
    "pytest-cov>=7.1.0",
    "pytest-rerunfailures>=16.3",
    "ruff>=0.15.18",
    "ty>=0.0.51",
    "vulture>=2.16",
]

# ---- pytest configuration (signals: test_performance_tracking, test_coverage_thresholds, flaky_test_detection) ----
# - --durations=10         : surface the 10 slowest tests in CI logs
# - --cov=src             : measure coverage for the Python source tree
# - --cov-fail-under=80   : gate CI on a minimum 80% line coverage threshold
# - --reruns=2            : re-run flaky tests up to twice
# - --reruns-delay=1      : small delay between retries to absorb transient I/O
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --durations=10 --cov=src --cov-report=term-missing --cov-report=xml:coverage/coverage.xml --cov-fail-under=80 --reruns=2 --reruns-delay=1"

[tool.ruff.format]
preview = true

# ---- ty (signal: type_check + strict_typing) ----
# ty is Astral's fast type checker, used here in strict mode for src/.
# `uv run ty check src` is wired into the lint script and CI.
[tool.ty.src]
include = ["src"]

[tool.ty.environment]
python-version = "3.12"

[tool.ty.rules]
# Allow missing type stubs for third-party libs without bundled types
unsupported-base = "warn"

# ---- deptry (signal: unused_dependencies_detection) ----
# Detects unused or missing Python dependencies.
# `uv run deptry .` is wired into CI.
[tool.deptry]
known_first_party = ["distill"]

[tool.deptry.per_rule_ignores]
DEP001 = ["compile"]
exclude = [".venv", "build", "dist", ".archived", "reports", "scratch"]

# ---- vulture (signal: dead_code_detection) ----
[tool.vulture]
min_confidence = 80
paths = ["src"]
sort_by_size = true
verbose = false
